Finish proposal step of the website
Signed-off-by: João Daniel <jotaf.daniel@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: MAC0499
-description: Trabalho de Conclusão de curso
-show_downloads: true
+description: Supervised Graduate Project
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
+
